--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
 
 <a-scene>
 <a-assets>
-<img id="skyTexture" src="/static/g1.jpg">
+<img id="skyTexture" src="/static/city.jpg">
 </a-assets>
 <a-sky src="#skyTexture"></a-sky>
 <a-box position="0.5 2.6 -2.5" rotation="45 0 0" color="grey"></a-box>
