--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,11 +10,11 @@
 <body>
 <a-scene>
     <a-assets>
-        <img id="cat" src="cat.jpg">
-        <img id="fishforcat" src="fishforcat.jpg">
+        <img id="cat" src="/static/cat.jpg">
+        <img id="fishforcat" src="/static/fishforcat.jpg">
     
-        <audio id="cat1" src="cat.mp3"></audio>
-        <audio id="cat-meow" src="cat-meow.mp3"></audio>
+        <audio id="cat1" src="/static/cat.mp3"></audio>
+        <audio id="cat-meow" src="/static/cat-meow.mp3"></audio>
       
     </a-assets>
 
