--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,8 +9,8 @@
 <!-- Asset Management-->
     <a-assets>
 <!-- Ground-->
-<img id="skytexture" src="../static/room.jpg">
-    <img id="floor" src="../static/box.jpg">
+<img id="skytexture" src="/../static/room.jpg">
+    <img id="floor" src="/../static/box.jpg">
     </a-assets>
 <a-plane src="#floor" shader="flat" position="-1 0 0" rotation="-90 0 0" scale="6 6 2"></a-plane>
 
